@@ -65,36 +65,8 @@ for the twi.tudelft.nl domain</a>.
 
 <h2>Usage</h2>
 
-Currently checkbot has the following command-line options:
-
-<table>
-  <tr>
-    <th>-v</th>
-    <td>Verbose mode, print each URL checked, and its result</td>
-  </tr>
-  <tr>
-    <th>-u</th>
-    <td>URL to start checking</td>
-  </tr>
-  <tr>
-    <th>-m</th>
-    <td>Match. Only URL's matching this string will be considered
-	internal URL's.
-    </td>
-  </tr>
-  <tr>
-    <th>-x</th>
-    <td>Exclude. Exclude URL's which match the string, even when they
-	do match the -m match string.
-    </td>
-  </tr>
-  <tr>
-    <th>-M</th<
-    <td>Mail. Mail a brief note to the specified mail address when
-        Checkbot is done.
-    </td>
-  </tr>
-</table>
+The documentation for Checkbot is contained within it. You can look at
+the <a href="checkbot.html">HTML version</a> here.
 
 To check a tree of html pages, just start Checkbot with a starting url
 and a match argument. Both are mandatory. For example, to check all
